# agent-stream

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_stream/: __init__.py  buffer.py  collector.py  processor.py  sse.py
src/agent_stream.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_buffer.py  test_collector.py  test_processor.py  test_sse.py
